--- a/Code-along/CompanyDemo.Infrastructure/CompanyDemo.Infrastructure.csproj
+++ b/Code-along/CompanyDemo.Infrastructure/CompanyDemo.Infrastructure.csproj
@@ -4,10 +4,12 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <UserSecretsId>042740ba-bcb6-428b-b19f-85f2e020d132</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="6.0.1" />
   </ItemGroup>
 
   <ItemGroup>
